Add alias and build for profiling and benchmarking (#790)